# kmgdev1_01

./: .gitignore  CMakeLists.txt  README.md
cmake_modules/: FindSFML.cmake
src/: AnimationDecorator.cpp  Animator.cpp  Animator.h  Enemy.cpp  Enemy.h  Entity.cpp  Entity.h  EntityDecorator.cpp  EntityDecorator.h  EntityManager.cpp  EntityManager.h  GameData.h  IEntity.h  PhysicsEntity.cpp  PhysicsEntity.h  Player.cpp  Player.h  Spawner.cpp  Spawner.h  TextureManager.cpp  TextureManager.h  main.cpp
src/abstract/: GameEntity.cpp  GameEntity.h
src/audio/: Sound.cpp  Sound.h
src/entity/: Animator.cpp  Animator.h  BaseEntity.cpp  BaseEntity.h  Enemy.cpp  Enemy.h  Entity.cpp  Entity.h  Grass.cpp  Grass.h  PhysicsEntity.cpp  PhysicsEntity.h  Player.cpp  Player.h
src/enums/: SpawnType.h
src/hiro/: AABB.h  CollisionCircle.cpp  CollisionCircle.h  CollisionData.cpp  CollisionData.h  CollisionPolygon.cpp  CollisionPolygon.h  CollisionShape.cpp  CollisionShape.h  CollisionTriangle.h  Edge.cpp  Edge.h  Mathf.h  Polygon.cpp  Polygon.h  Rect.h  Rigidbody.cpp  Rigidbody.h  Triangle.cpp  Triangle.h  Vector2.h  Vertex.cpp  Vertex.h  hiro.h
src/include/entity/: AnimationDecorator.h  Entity.cpp  Entity.h  EntityDecorator.cpp  EntityDecorator.h
src/include/interfaces/: IEntity.h
src/include/utility/: TextureLoader.h
src/managers/: AudioManager.cpp  AudioManager.h  CollisionManager.cpp  CollisionManager.h  EntityManager.cpp  EntityManager.h  GameManager.cpp  GameManager.h  InterfaceManager.cpp  InterfaceManager.h  Managers.h  SoundType.h  StateType.h  TextureManager.cpp  TextureManager.h
src/math/: Vector2.h
src/spawner/: SpawnType.h  Spawner.cpp  Spawner.h
